@@ -1,3 +1,9 @@
+2001-11-18  Per Bothner  <per@bothner.com>
+
+	* ClassMethods.java (getMethods):  Use ClassType's new getMethods
+	method, using Vector instead of Method[].
+	Fix off-by-one loop when duplicate found - don't increment i.
+
 2001-11-05  Per Bothner  <per@bothner.com>
 
 	* Invoke.java (compile):  Better warning - list applicable methods.
